--- a/poster-ui/styles/globals.css
+++ b/poster-ui/styles/globals.css
@@ -1,19 +1,26 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+
+:root {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.form-control-sm {
+  margin: 1vh 0vh;
+}
+
+.btn-danger {
+  margin: 1vh 0vh;
 }
 
 body {
@@ -35,8 +42,48 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+html {
+  color-scheme: dark;
+}
+
+#inputForm {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+}
+
+#container {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+}
+
+.innerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 4vh;
+}
+
+#msgs {
+  width: 100%;
+  height: 50%;
+  overflow:scroll;
+}
+
+.pastMsg {
+  border: 2px solid blueviolet;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 1vh;
 }
